Complete Task 44 AI task registry coverage